# osqp_mkl

./: README.rst  pyproject.toml  setup.py
.github/workflows/: build_mkl.yml  prepare_build_environment_linux_cuda.sh  prepare_build_environment_windows.sh  prepare_build_environment_windows_mkl.sh
