[build-system]
requires = ["setuptools>=40.8.0", "wheel", "oldest-supported-numpy", "scipy>=0.13.2"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
test-requires = ["pytest", "git+git://github.com/osqp/osqp-python.git@vb/pybind11", "mkl-devel"]
# The OSQP_ALGEBRA envvar is not strictly required, since OSQP will pick up the "best" algebra available,
#   but we can force the usage of a particular algebra by specifying this.
test-command-linux = "OSQP_ALGEBRA=mkl LD_PRELOAD=/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_core.so:/opt/intel/oneapi/mkl/latest/lib/intel64/libmkl_sequential.so pytest -s $(python -c \"import osqp; print(osqp.__path__[0])\")/tests"
# test-command = "OSQP_ALGEBRA=mkl pytest -s $(python -c \"import osqp; print(osqp.__path__[0])\")/tests"

[tool.cibuildwheel.linux]
environment = { OSQP_ALGEBRA="mkl", MKL_ROOT="/opt/intel/oneapi/mkl/latest" }
before-all = ".github/workflows/prepare_build_environment_linux_mkl.sh"

[tool.cibuildwheel.macos]
environment = { OSQP_ALGEBRA="mkl", MKL_ROOT="/opt/intel/oneapi/mkl/latest" }
before-all = ".github/workflows/prepare_build_environment_macos_mkl.sh"

[tool.cibuildwheel.windows]
environment = { OSQP_ALGEBRA="mkl", MKL_ROOT="C:\\Program Files (x86)\\Intel\\oneAPI\\mkl\\latest" }
before-all = "bash .github/workflows/prepare_build_environment_windows_mkl.sh"
